--- a/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
+++ b/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yK9-Xk-S5O">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main Table View Controller-->
+        <scene sceneID="F08-oa-TDd">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="yK9-Xk-S5O" customClass="MainTableViewController" customModule="intern_borathon_2019" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Js5-Qk-eYh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mainTableViewCell" rowHeight="322" id="RSD-Fx-b00" customClass="MainTableViewCell" customModule="intern_borathon_2019" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="322"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RSD-Fx-b00" id="TIn-tn-X8a">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="321.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wH-ts-rOD">
+                                            <rect key="frame" x="30" y="68" width="354" height="200"/>
+                                            <color key="backgroundColor" red="0.0" green="1" blue="0.0096537812081503027" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="g2M-Jn-6CB"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prom Parking Lot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgo-GT-Mg4">
+                                            <rect key="frame" x="30" y="21" width="354" height="42"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50% Full" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW4-vz-rSc">
+                                            <rect key="frame" x="30" y="273" width="354" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="top" secondItem="TIn-tn-X8a" secondAttribute="topMargin" constant="10" id="BJc-pR-R3F"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="dW4-vz-rSc" secondAttribute="trailing" constant="10" id="P13-Fn-cID"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Vgo-GT-Mg4" secondAttribute="trailing" constant="10" id="T7P-pn-gFF"/>
+                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="WKx-0i-Gms"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1wH-ts-rOD" secondAttribute="trailing" constant="10" id="bdr-4l-Wrc"/>
+                                        <constraint firstItem="dW4-vz-rSc" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="doO-Px-hl6"/>
+                                        <constraint firstItem="dW4-vz-rSc" firstAttribute="top" secondItem="1wH-ts-rOD" secondAttribute="bottom" constant="5" id="dvx-a3-LxP"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="o6F-hb-feR"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="top" secondItem="Vgo-GT-Mg4" secondAttribute="bottom" constant="5" id="q4M-u2-9ed"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="capacityLabel" destination="dW4-vz-rSc" id="Yc7-Qw-Rxt"/>
+                                    <outlet property="locationLabel" destination="Vgo-GT-Mg4" id="cYP-Hx-Yrm"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yK9-Xk-S5O" id="tZS-bX-fNq"/>
+                            <outlet property="delegate" destination="yK9-Xk-S5O" id="3md-P4-bhw"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N25-7k-aLO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="828.98550724637687" y="142.63392857142856"/>
         </scene>
     </scenes>
 </document>
