--- a/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
+++ b/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
@@ -26,14 +26,14 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wH-ts-rOD" customClass="LineChartView" customModule="Charts">
-                                            <rect key="frame" x="30" y="68" width="354" height="200"/>
+                                            <rect key="frame" x="20" y="68" width="374" height="200"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="200" id="g2M-Jn-6CB"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prom Parking Lot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgo-GT-Mg4">
-                                            <rect key="frame" x="30" y="21" width="354" height="42"/>
+                                            <rect key="frame" x="25" y="21" width="364" height="42"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -48,12 +48,12 @@
                                     <constraints>
                                         <constraint firstItem="Vgo-GT-Mg4" firstAttribute="top" secondItem="TIn-tn-X8a" secondAttribute="topMargin" constant="10" id="BJc-pR-R3F"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="dW4-vz-rSc" secondAttribute="trailing" constant="10" id="P13-Fn-cID"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Vgo-GT-Mg4" secondAttribute="trailing" constant="10" id="T7P-pn-gFF"/>
-                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="WKx-0i-Gms"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="1wH-ts-rOD" secondAttribute="trailing" constant="10" id="bdr-4l-Wrc"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Vgo-GT-Mg4" secondAttribute="trailing" constant="5" id="T7P-pn-gFF"/>
+                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="5" id="WKx-0i-Gms"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1wH-ts-rOD" secondAttribute="trailing" id="bdr-4l-Wrc"/>
                                         <constraint firstItem="dW4-vz-rSc" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="doO-Px-hl6"/>
                                         <constraint firstItem="dW4-vz-rSc" firstAttribute="top" secondItem="1wH-ts-rOD" secondAttribute="bottom" constant="5" id="dvx-a3-LxP"/>
-                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="o6F-hb-feR"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" id="o6F-hb-feR"/>
                                         <constraint firstItem="1wH-ts-rOD" firstAttribute="top" secondItem="Vgo-GT-Mg4" secondAttribute="bottom" constant="5" id="q4M-u2-9ed"/>
                                     </constraints>
                                 </tableViewCellContentView>
