--- a/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
+++ b/intern-borathon-2019/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yK9-Xk-S5O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rVn-Ld-jRl">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,14 +9,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main Table View Controller-->
+        <!--VMwhere-->
         <scene sceneID="F08-oa-TDd">
             <objects>
                 <tableViewController id="yK9-Xk-S5O" customClass="MainTableViewController" customModule="intern_borathon_2019" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Js5-Qk-eYh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.20000156760215759" green="0.19999706745147705" blue="0.2000001072883606" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mainTableViewCell" rowHeight="322" id="RSD-Fx-b00" customClass="MainTableViewCell" customModule="intern_borathon_2019" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="322"/>
@@ -26,37 +26,41 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wH-ts-rOD" customClass="LineChartView" customModule="Charts">
-                                            <rect key="frame" x="20" y="68" width="374" height="200"/>
+                                            <rect key="frame" x="20" y="63" width="374" height="200"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="200" id="g2M-Jn-6CB"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prom Parking Lot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgo-GT-Mg4">
-                                            <rect key="frame" x="25" y="21" width="364" height="42"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50% Full" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW4-vz-rSc">
-                                            <rect key="frame" x="30" y="273" width="354" height="30"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="center" distribution="equalSpacing" alignment="firstBaseline" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="YsJ-ZJ-VyJ">
+                                            <rect key="frame" x="20" y="16" width="374" height="42"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prom Parking Lot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgo-GT-Mg4">
+                                                    <rect key="frame" x="0.0" y="0.0" width="253" height="42"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                                    <color key="textColor" red="0.81177014112472534" green="0.81175488233566284" blue="0.81176525354385376" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3/7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW4-vz-rSc">
+                                                    <rect key="frame" x="336" y="9.5" width="38" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <color key="textColor" red="0.81177014110000001" green="0.81175488230000004" blue="0.81176525349999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="top" secondItem="TIn-tn-X8a" secondAttribute="topMargin" constant="10" id="BJc-pR-R3F"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="dW4-vz-rSc" secondAttribute="trailing" constant="10" id="P13-Fn-cID"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Vgo-GT-Mg4" secondAttribute="trailing" constant="5" id="T7P-pn-gFF"/>
-                                        <constraint firstItem="Vgo-GT-Mg4" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="5" id="WKx-0i-Gms"/>
+                                        <constraint firstItem="YsJ-ZJ-VyJ" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" id="Dbi-2V-bSH"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" id="FhA-lm-ayP"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="top" secondItem="YsJ-ZJ-VyJ" secondAttribute="bottom" constant="5" id="KWf-Sa-duz"/>
+                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="trailing" secondItem="TIn-tn-X8a" secondAttribute="trailingMargin" id="ZcH-yh-2X4"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="1wH-ts-rOD" secondAttribute="trailing" id="bdr-4l-Wrc"/>
-                                        <constraint firstItem="dW4-vz-rSc" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" constant="10" id="doO-Px-hl6"/>
-                                        <constraint firstItem="dW4-vz-rSc" firstAttribute="top" secondItem="1wH-ts-rOD" secondAttribute="bottom" constant="5" id="dvx-a3-LxP"/>
-                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="leading" secondItem="TIn-tn-X8a" secondAttribute="leadingMargin" id="o6F-hb-feR"/>
-                                        <constraint firstItem="1wH-ts-rOD" firstAttribute="top" secondItem="Vgo-GT-Mg4" secondAttribute="bottom" constant="5" id="q4M-u2-9ed"/>
+                                        <constraint firstItem="YsJ-ZJ-VyJ" firstAttribute="top" secondItem="TIn-tn-X8a" secondAttribute="topMargin" constant="5" id="eEq-Ns-PCG"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="YsJ-ZJ-VyJ" secondAttribute="trailing" id="j8A-XP-bR0"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.10980496555566788" green="0.10980203002691269" blue="0.10980401188135147" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <connections>
                                     <outlet property="capacityLabel" destination="dW4-vz-rSc" id="Yc7-Qw-Rxt"/>
                                     <outlet property="locationLabel" destination="Vgo-GT-Mg4" id="cYP-Hx-Yrm"/>
@@ -69,8 +73,33 @@
                             <outlet property="delegate" destination="yK9-Xk-S5O" id="3md-P4-bhw"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="VMwhere" id="c5u-HF-AeH"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N25-7k-aLO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1739.1304347826087" y="142.63392857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="D1W-Od-LkD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rVn-Ld-jRl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AiJ-IK-dcD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.20000156760215759" green="0.19999706745147705" blue="0.2000001072883606" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="barTintColor" red="0.20000156760215759" green="0.19999706745147705" blue="0.2000001072883606" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yK9-Xk-S5O" kind="relationship" relationship="rootViewController" id="00z-Xc-2qh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rdf-tn-GYg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="828.98550724637687" y="142.63392857142856"/>
         </scene>
